src/Mobile.css
/* ... */
.card-content {
  display: flex;
}

.card-content > div {
  width: 50%;
}

.card-content > h1 {
  padding: 0 10px 0 0;
  margin: 0;
}

.continue-button {
  text-align: right;
  margin-top: 20px;
  align-items: center;
  justify-content: center;
  display: flex;
}

.continue-button button {
  background-color: #1c4f97;
  color: #fff;
  border: 1px;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  border-radius: 18px;
  width: 150px;
  height: 35px;
}

.tooltip-container {
  position: relative;
}

.tooltip {
  position: absolute;
  top: 100%;
  left: 0;
  background-color: #fff;
  border: 1px solid #ddd;
  padding: 10px;
  z-index: 1;
}

.tooltip-trigger {
  display: inline-block;
  width: 27px;
  height: 27px;
  line-height: 20px;
  text-align: center;
  border-radius: 50%;
  background-color: #1c4f97;
  margin-left: 5px;
  color: white;
  font-size: 14;
  font-weight: 700;
  cursor: pointer;
  pointer-events: none;
}

/*     MobileFix     */
.stepNav-mobile {
  display: flex;
  flex-direction: column;
  align-items: start;
}

.simulacionRow {
  width: 100%;
}

.simulacion-cuotas-movil {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 100%;
  align-items: center;
  align-content: center;
}

.formControl-root simulacionRow cuotas {
  margin: 0px;
  width: 50%;
}

.recalcular-button {
  background-color: #5cb8f7;
  color: white;
  border: none;
  border-radius: 30px;
  padding: 10px 30px;
  font-size: 16px;
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  width: 50%;
}

.mas-info {
  margin-left: -190px;
}

.cuota {
  font-size: 28px !important;
}

.cuoton {
  padding-left: 63px;
}

.checkmark-circle {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  background-color: #00a9e3;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* VALIDAR CON AGENTE */

.image-container {
  position: relative;
  width: 100%;
}

.image-container img {
  width: 100%;
  height: auto;
  border-radius: 15px;
}

.checkmark-wrapper {
  position: absolute;
  bottom: 0;
  left: 50%;
  transform: translateX(-50%) translateY(50%);
  background-color: white;
  border-radius: 50%;
  padding: 8px;
}

.checkmark-icon {
  width: 80px;
  height: 80px;
}

.content-container {
  padding: 30px 15px 15px 15px;
  display: flex;
  flex-direction: column;
  align-items: center;

  p {
    text-align: center;
  }
}

h2 {
  color: #1a73e8;
  font-size: 18px;
  margin-bottom: 10px;
}

p {
  font-size: 14px;
  margin-bottom: 10px;
}

.finalize-button {
  border: 1px solid #ccc;
  border-radius: 20px;
  padding: 10px 20px;
  font-size: 14px;
  cursor: pointer;
  margin-top: 20px;
  background-color: white;
}

.finalize-button:hover {
  background-color: #ddd;
}

/* EXITO */

.exito-container {
  min-height: 450px;
}

.exito-content {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;

  h1 {
    text-align: center;
  }
  p {
    text-align: center;
  }
}

